Working on references on DOM and fixing booleens for radio buttons

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <tr>
                 <td>Flap Setting</td>
                 <td>
-                    <input type="radio" name="flaps" value="No flaps">No flaps
+                    <input type="radio" name="flaps" value="No flaps" checked>No flaps
                     <input type="radio" name="flaps" value="15 Degree">15 degrees
                 </td>
             </tr>
             <tr>
                 <td>ECS Setting</td>
                 <td>
-                    <input type="radio" name="ecs" value="Off">Off
+                    <input type="radio" name="ecs" value="Off" checked>Off
                     <input type="radio" name="ecs" value="On">On
                 </td>
                 <tr>
