--- a/index.html
+++ b/index.html
@@ -64,10 +64,18 @@
                     <input type="radio" name="ecs" value="On">On
                 </td>
             </tr>
+            <tr>
+                <td>Engine Anti-Ice</td>
+                <td>
+                    <input type="radio" name="ai" value="Off" checked>Off
+                    <input type="radio" name="ai" value="On">On
+                </td>
+            </tr>
         </table>
         <button id="calculate">Calculate</button>
         <button id="reset">Reset</button>
         <div id="result" style="display: none">
+            <p id="badConf"></p>
             <p>Pressure altitude is: </p><p id="presAlt">presAlt</p>
             <p>V1 value: </p><p id="v1">v1</p>
             <p>Vr: </p><p id="vr">vr</p>
