Fixed selection of array values (set1-set6) and added error handling function called limits

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
         <button id="calculate">Calculate</button>
         <button id="reset">Reset</button>
         <div id="result" style="display: none">
+            <p id="badInput"></p>
             <p id="badConf"></p>
             <p>Pressure altitude is: </p><p id="presAlt">presAlt</p>
             <p>V1 value: </p><p id="v1">v1</p>
             <p>Vr: </p><p id="vr">vr</p>
             <p>V2: </p><p id="v2">v2</p>
             <p>Vclean: </p><p id="vClean">vClean</p>
-            <p>Vflap </p><p id="vFlap">vFlap</p>
+            <p>Vflap: </p><p id="vFlap"></p>
         </div>
     <script src="app.js"></script>
 </body>
