Added CSS structure, some HTML divs and further improved on error handling messages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+       <div id="topMenu"><a href="https://dreamsimcreations.com/">Take me back to DreamSim Creations</a></div>
         <table id="centerTable">
             <tr id="tableHeading">
                 <th colspan="3">SAAB340a Takeoff performance calculator</th>
@@ -15,40 +16,40 @@
             <tr>
                 <td>Takeoff weight</td>
                 <td>
-                    <input type="number" id="grossWeight" placeholder="between 19000-30000">LBS</td>
+                    <input type="number" id="grossWeight" placeholder="between 19000-30000"><p>LBS</p></td>
             </tr>
             <tr>
                 <td>Temperature</td>
                 <td>
-                    <input type="number" id="temperature" placeholder="eg. 15">Celcius</td>
+                    <input type="number" id="temperature" placeholder="eg. 15"><p>Celcius</p></td>
             </tr>
             <tr>
                 <td>Field pressure (MSL)</td>
                 <td>
-                    <input type="number" id="pressure" placeholder="eg. 29.92">inHg</td>
+                    <input type="number" id="pressure" placeholder="eg. 29.92"><p>inHg</p></td>
             </tr>
             <tr>
                 <td>Field elevation (MSL)</td>
                 <td>
-                    <input type="number" id="fieldElevation" placeholder="eg. 145">ft</td>
+                    <input type="number" id="fieldElevation" placeholder="eg. 145"><p>ft</p></td>
             </tr>
             <tr>
                 <td>Runway heading</td>
                 <td>
-                    <input type="number" id="rwHeading" placeholder="eg. 140">Degrees</td>
+                    <input type="number" id="rwHeading" placeholder="eg. 140"><p>Degrees</p></td>
             </tr>
             <tr>
             <tr>
                 <td>Runway slope</td>
                 <td>
-                    <input type="number" id="rwSlope" placeholder="eg. 0.5">Percent</td>
+                    <input type="number" id="rwSlope" placeholder="eg. 0.5"><p>Percent</p></td>
                 </td>
             </tr>
                 <td>Wind</td>
                 <td>
-                    <input type="text" id="windDegrees" placeholder="eg. 360">Degrees</td>
+                    <input type="text" id="windDegrees" placeholder="eg. 360"><p>Degrees</p></td>
                 <td>
-                    <input type="text" id="windSpeed" placeholder="eg. 14">Kts
+                    <input type="text" id="windSpeed" placeholder="eg. 14"><p>Kts</p>
                 </td>
             </tr>
             <tr>
@@ -87,6 +88,7 @@
         </div>
         <footer><p>DISCLAMER: This is a flightsimulation tool and as such should not to be used for real world navigation. 
 The author(s) will not be held responsible for any violations occured using this tool.</p><p>If you wish to contribute to the project, visit <a href="https://github.com/DraggeBagge/Saab340APerformanceCalculator" target="_blank">our Github page</a></p>.</footer>
+   
     <script src="app.js"></script>
 </body>
 
