--- a/calcModels/sf340.html
+++ b/calcModels/sf340.html
@@ -1,164 +1,126 @@
-<div class="container mt-3">
-    <h2>Aircraftname</h2>
-    <br>
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="tab" href="#aircraft_takeOff">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#menu1">Menu 1</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" data-bs-toggle="tab" href="#menu2">Menu 2</a>
-        </li>
-    </ul>
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-        <div id="home" class="container tab-pane active"><br>
-            <h3>HOME</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua.</p>
-        </div>
-        <div id="menu1" class="container tab-pane fade"><br>
-            <h3>Menu 1</h3>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-        </div>
-        <div id="menu2" class="container tab-pane fade"><br>
-            <h3>Menu 2</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                totam
-                rem aperiam.</p>
-        </div>
+<h1>Saab 340 (a/b)</h1>
+<!--Tab bar begin -->
+<nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <button class="nav-link active" id="nav-takeoff-tab" data-bs-toggle="tab" data-bs-target="#nav-takeoff" type="button" role="tab" aria-controls="nav-takeoff" aria-selected="true">Takeoff</button>
+      <button class="nav-link" id="nav-landing-tab" data-bs-toggle="tab" data-bs-target="#nav-landing" type="button" role="tab" aria-controls="nav-landing" aria-selected="false">Landing</button>
     </div>
-</div><!-- End content -->
-<div id="topMenu"><a href="https://dreamsimcreations.com/">Take me back to DreamSim Creations</a></div>
-<table id="centerTable">
-    <tr id="tableHeading">
-        <th colspan="3">SAAB340a Takeoff performance calculator</th>
-    </tr>
-    <tr>
-        <td>Takeoff weight</td>
-        <td>
-            <input type="number" id="grossWeight" placeholder="between 19000-30000">
-            <p>LBS</p>
-        </td>
-    </tr>
-    <tr>
-        <td>Temperature</td>
-        <td>
-            <input type="number" id="temperature" placeholder="eg. 15">
-            <p>Celcius</p>
-        </td>
-    </tr>
-    <tr>
-        <td>Field pressure (MSL)</td>
-        <td>
-            <input type="number" id="pressure" placeholder="eg. 29.92">
-            <p>inHg</p>
-        </td>
-    </tr>
-    <tr>
-        <td>Field elevation (MSL)</td>
-        <td>
-            <input type="number" id="fieldElevation" placeholder="eg. 145">
-            <p>ft</p>
-        </td>
-    </tr>
-    <tr>
-        <td>Runway heading</td>
-        <td>
-            <input type="number" id="rwHeading" placeholder="eg. 140">
-            <p>Degrees</p>
-        </td>
-    </tr>
-    <tr>
-    <tr>
-        <td>Runway slope</td>
-        <td>
-            <input type="number" id="rwSlope" placeholder="eg. 0.5">
-            <p>Percent</p>
-        </td>
-        </td>
-    </tr>
-    <td>Wind</td>
-    <td>
-        <input type="text" id="windDegrees" placeholder="eg. 360">
-        <p>Degrees</p>
-    </td>
-    <td>
-        <input type="text" id="windSpeed" placeholder="eg. 14">
-        <p>Kts</p>
-    </td>
-    </tr>
-    <tr>
-        <td>Flap Setting</td>
-        <td>
-            <input type="radio" name="flaps" value="No flaps" checked>No flaps
-            <input type="radio" name="flaps" value="15 Degree">15 degrees
-        </td>
-    </tr>
-    <tr>
-        <td>ECS Setting</td>
-        <td>
-            <input type="radio" name="ecs" value="Off" checked>Off
-            <input type="radio" name="ecs" value="On">On
-        </td>
-    </tr>
-    <tr>
-        <td>Engine Anti-Ice</td>
-        <td>
-            <input type="radio" name="ai" value="Off" checked>Off
-            <input type="radio" name="ai" value="On">On
-        </td>
-    </tr>
-</table>
-<div class="center"><button class="" id="calculate">Calculate</button>
-    <button class="" id="reset">Reset</button>
-</div>
-<!--
-        Use this section if the table does not work out    
-            <div id="result" style="display: none">
-            <p id="badInput"></p>
-            <p id="badConf"></p>
-            <p>Pressure altitude is: </p><p id="presAlt">Not calculated</p>
-            <p>V1 value: </p><p id="v1">Not calculated</p>
-            <p>Vr: </p><p id="vr">Not calculated</p>
-            <p>V2: </p><p id="v2">Not calculated</p>
-            <p>Vclean: </p><p id="vClean">Not calculated</p>
-            <p>Vflap: </p><p id="vFlap"></p>
+  </nav> <!-- Tab bar end-->
+
+  <!-- Begin calculator -->
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-takeoff" role="tabpanel" aria-labelledby="nav-takeoff-tab">
+        <table id="centerTable">
+            <tr>
+                <td>Takeoff weight</td>
+                <td>
+                    <input type="number" id="grossWeight" placeholder="between 19000-30000">
+                    <p>LBS</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Temperature</td>
+                <td>
+                    <input type="number" id="temperature" placeholder="eg. 15">
+                    <p>Celcius</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Field pressure (MSL)</td>
+                <td>
+                    <input type="number" id="pressure" placeholder="eg. 29.92">
+                    <p>inHg</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Field elevation (MSL)</td>
+                <td>
+                    <input type="number" id="fieldElevation" placeholder="eg. 145">
+                    <p>ft</p>
+                </td>
+            </tr>
+            <tr>
+                <td>Runway heading</td>
+                <td>
+                    <input type="number" id="rwHeading" placeholder="eg. 140">
+                    <p>Degrees</p>
+                </td>
+            </tr>
+            <tr>
+            <tr>
+                <td>Runway slope</td>
+                <td>
+                    <input type="number" id="rwSlope" placeholder="eg. 0.5">
+                    <p>Percent</p>
+                </td>
+                </td>
+            </tr>
+            <td>Wind</td>
+            <td>
+                <input type="text" id="windDegrees" placeholder="eg. 360">
+                <p>Degrees</p>
+            </td>
+            <td>
+                <input type="text" id="windSpeed" placeholder="eg. 14">
+                <p>Kts</p>
+            </td>
+            </tr>
+            <tr>
+                <td>Flap Setting</td>
+                <td>
+                    <input type="radio" name="flaps" value="No flaps" checked>No flaps
+                    <input type="radio" name="flaps" value="15 Degree">15 degrees
+                </td>
+            </tr>
+            <tr>
+                <td>ECS Setting</td>
+                <td>
+                    <input type="radio" name="ecs" value="Off" checked>Off
+                    <input type="radio" name="ecs" value="On">On
+                </td>
+            </tr>
+            <tr>
+                <td>Engine Anti-Ice</td>
+                <td>
+                    <input type="radio" name="ai" value="Off" checked>Off
+                    <input type="radio" name="ai" value="On">On
+                </td>
+            </tr>
+        </table>
+        <div class="center"><button class="" id="calculate">Calculate</button>
+            <button class="" id="reset">Reset</button>
         </div>
-    
-        -->
-<table id="result" style="display: none">
-    <tr>
-        <th colspan="2">Results</th>
-    </tr>
-    <tr>
-        <td>Pressure altitude:</td>
-        <td id="presAlt">Not calculated</td>
-    </tr>
-    <tr>
-        <td>V1:</td>
-        <td id="v1">Not calculated</td>
-    </tr>
-    <tr>
-        <td>Vr:</td>
-        <td id="vr">Not calculated</td>
-    </tr>
-    <tr>
-        <td>V2:</td>
-        <td id="v2">Not calculated</td>
-    </tr>
-    <tr>
-        <td>Vclean:</td>
-        <td id="vClean">Not calculated</td>
-    </tr>
-    <tr>
-        <td>Vflap:</td>
-        <td id="vFlap">Not calculated</td>
-    </tr>
-</table>
+        <table id="result" style="display: none">
+            <tr>
+                <th colspan="2">Results</th>
+            </tr>
+            <tr>
+                <td>Pressure altitude:</td>
+                <td id="presAlt">Not calculated</td>
+            </tr>
+            <tr>
+                <td>V1:</td>
+                <td id="v1">Not calculated</td>
+            </tr>
+            <tr>
+                <td>Vr:</td>
+                <td id="vr">Not calculated</td>
+            </tr>
+            <tr>
+                <td>V2:</td>
+                <td id="v2">Not calculated</td>
+            </tr>
+            <tr>
+                <td>Vclean:</td>
+                <td id="vClean">Not calculated</td>
+            </tr>
+            <tr>
+                <td>Vflap:</td>
+                <td id="vFlap">Not calculated</td>
+            </tr>
+        </table>
+    </div>
+    <div class="tab-pane fade" id="nav-landing" role="tabpanel" aria-labelledby="nav-landing-tab">...</div>
+  </div>
+  <!-- End calculator -->
