--- a/html/sidebarMenu.html
+++ b/html/sidebarMenu.html
@@ -1,36 +1,39 @@
 <!-- Begin sidebar -->
-<div class="sidebar flex-shrink-0 p-3" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center pb-3 mb-3 link-light text-decoration-none border-bottom">
-        <svg class="bi pe-none me-2" width="30" height="24">
-            <use xlink:href="#bootstrap" />
-        </svg>
-        <span class="fs-5 text-light fw-semibold">TLPC v.0.2.0-alpha</span>
-    </a>
-    <ul class="list-unstyled ps-0">
-        <li class="mb-1">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                data-bs-toggle="collapse" data-bs-target="#prop-collapse" aria-expanded="true">
-                Prop
-            </button>
-            <div class="collapse show" id="prop-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-light d-inline-flex text-decoration-none rounded">Saab340</a></li>
-                    <li><a href="#" class="disabled d-inline-flex text-decoration-none rounded">Metroliner II</a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="mb-1">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                data-bs-toggle="collapse" data-bs-target="#jet-collapse" aria-expanded="false">
-                Jet
-            </button>
-            <div class="collapse" id="jet-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-disabled d-inline-flex text-decoration-none rounded">Challenger 650</a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="border-top my-3"></li>
-    </ul>
-</div><!-- End sidebar -->
-<!-- Begin content -->
+    <div class="sidebar col-lg-4 border-end flex-shrink-0 p-4" style="width: 280px;">
+        <a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
+            <svg class="bi pe-none me-2" width="30" height="24">
+                <use xlink:href="#bootstrap" />
+            </svg>
+            <span class="fs-5 fw-semibold">TLPC v.0.2.0-alpha</span>
+        </a>
+        <ul class="list-unstyled ps-0">
+            <li class="mb-1">
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+                    data-bs-toggle="collapse" data-bs-target="#prop-collapse" aria-expanded="true">
+                    Prop
+                </button>
+                <div class="collapse show" id="prop-collapse">
+                    <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Saab340</a></li>
+                        <li><a href="#"
+                                class="nav-link disabled text-black-50 d-inline-flex text-decoration-none rounded">Metroliner
+                                II (WIP)</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="mb-1">
+                <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+                    data-bs-toggle="collapse" data-bs-target="#jet-collapse" aria-expanded="false">
+                    Jet
+                </button>
+                <div class="collapse" id="jet-collapse">
+                    <ul class="disabled btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <li><a href="#"
+                                class="nav-link disabled text-black-50 d-inline-flex text-decoration-none rounded">Challenger
+                                650 (WIP)</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="border-top my-3"></li>
+        </ul>
+    </div><!-- End sidebar -->
