Fixes A version containing multiple fixes and enhancements to the style. One compitability bug left - see issue #8

--- a/calcModels/sf340.html
+++ b/calcModels/sf340.html
@@ -1,15 +1,16 @@
-
 <h1>Saab 340 (a/b)</h1>
 <!--Tab bar begin -->
 <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <button class="nav-link active" id="nav-takeoff-tab" data-bs-toggle="tab" data-bs-target="#nav-takeoff" type="button" role="tab" aria-controls="nav-takeoff" aria-selected="true">Takeoff</button>
-      <button class="nav-link" id="nav-landing-tab" data-bs-toggle="tab" data-bs-target="#nav-landing" type="button" role="tab" aria-controls="nav-landing" aria-selected="false">Landing</button>
+        <button class="nav-link active" id="nav-takeoff-tab" data-bs-toggle="tab" data-bs-target="#nav-takeoff"
+            type="button" role="tab" aria-controls="nav-takeoff" aria-selected="true">Takeoff</button>
+        <button class="nav-link" id="nav-landing-tab" data-bs-toggle="tab" data-bs-target="#nav-landing" type="button"
+            role="tab" aria-controls="nav-landing" aria-selected="false">Landing</button>
     </div>
-  </nav> <!-- Tab bar end-->
+</nav> <!-- Tab bar end-->
 
-  <!-- Begin calculator -->
-  <div class="tab-content" id="nav-tabContent">
+<!-- Begin calculator -->
+<div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-takeoff" role="tabpanel" aria-labelledby="nav-takeoff-tab">
         <table id="centerTable">
             <tr>
@@ -88,7 +89,8 @@
                 </td>
             </tr>
         </table>
-        <div class="center"><button class="" id="calculate">Calculate</button>
+        <div class="center">
+            <button class="" id="calculate">Calculate</button>
             <button class="" id="reset">Reset</button>
         </div>
         <table id="result" style="display: none">
@@ -122,5 +124,5 @@
         </table>
     </div>
     <div class="tab-pane fade" id="nav-landing" role="tabpanel" aria-labelledby="nav-landing-tab">...</div>
-  </div>
-  <!-- End calculator -->
+</div>
+<!-- End calculator -->
