--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 </head>
 
 <body>
-    <div class="row">
-      <div class="col-sm-4" w3-include-html="html/sidebarMenu.html"></div>
-      <div class="col-sm-8 well-lg">
-        <div class="calcContainer">
-          <div class="p-4" w3-include-html="calcModels/sf340.html"></div>
-        </div>
+  <div class="row">
+    <div class="col-md-4" w3-include-html="html/sidebarMenu.html"></div>
+    <div class="col-md-8 well-lg">
+      <div class="calcContainer">
+        <div class="p-4" w3-include-html="calcModels/sf340.html"></div>
       </div>
-    </div> <!-- Sidebar end -->
+    </div>
+  </div> <!-- Sidebar end -->
 
-    <footer class="fixed-bottom text-light text-center text-lg-start">
-      <p class="text-center p-3">DISCLAMER: This is a flight simulation tool and as such should not to be used for real
-        world navigation.
-        The author(s) will not be held responsible for any violations occured using this tool.<br><br>To report a bug
-        please file an issue on our <a href="https://github.com/DraggeBagge/Saab340APerformanceCalculator/issues"
-          target="_blank">Github page</a><br>For support, contact <a
-          href="mailto:drago@flightsimsweden.se">drago@flightsimsweden.se</a><br><br> If you wish to contribute to the
-        project, visit <a href="https://github.com/DraggeBagge/Saab340APerformanceCalculator" target="_blank">TLPC
-          Github
-          page</a></p>
+  <div class="row">
+    <footer class="col-md align-items-center text-light text-md-start">
+      <div class="row">
+        <p class="col-md-4 text-left p-4 small">File an issue: <a href="https://github.com/DraggeBagge/Takeoff-and-Landing-Performance-Calculators/issues" target="_blank">Github</a><br>Contact: <a
+          href="mailto:drago@flightsimsweden.se">drago@flightsimsweden.se</a></p>
+          <p class="col-md-7 text-left p-4 small">DISCLAMER: This is a flight simulation tool and as such should not to
+          be used for real
+          world navigation.
+          The author(s) will not be held responsible for any violations occured using this tool.</p>
+      </div>
     </footer> <!-- Footer end-->
+  </div>
   <!-- Neccessery modules -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <script>w3.includeHTML();</script>
@@ -39,7 +40,7 @@
   <!-- Own neccessery modules -->
 
   <!-- Aircraft specific scripts -->
-  <script src="js/js_sf340.js"></script>
+  <script src="calcModels/js/js_sf340.js"></script>
 </body>
 
 </html>
