Fixed bug#8 (javascript loads before aircraft file)

--- a/html/sidebarMenu.html
+++ b/html/sidebarMenu.html
@@ -17,7 +17,7 @@
                         <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded">Saab340</a></li>
                         <li><a href="#"
                                 class="nav-link disabled text-black-50 d-inline-flex text-decoration-none rounded">Metroliner
-                                II (WIP)</a></li>
+                                III (WIP)</a></li>
                     </ul>
                 </div>
             </li>
