Fixed: Latency of subframe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="col-md-4" w3-include-html="html/sidebarMenu.html"></div>
     <div class="col-md-8 well-lg">
       <div class="calcContainer">
-        <div class="p-4" w3-include-html="calcModels/sf340.html"></div> <!-- TimeOut needed in order for all HTML to load before script -->
+        <div class="p-4" id="calcFrame" w3-include-html="calcModels/sf340.html"></div> <!-- TimeOut needed in order for all HTML to load before script -->
       </div>
     </div>
   </div> <!-- Sidebar end -->
